# CT-Legislative-Intelligence-System

./: .env.example  .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
apps/api/: main.py
apps/worker/: jobs.py  scheduler.py
config/: clients.example.yaml  settings.py  taxonomy.change_flags.yaml  taxonomy.subjects.yaml  taxonomy.urgency.yaml
config/clients/: client_via.yaml
data/fixtures/: all_filecopies_sample.html  bill_status_sample.html  daily_filecopies_sample.html
docs/: build-spec.md  production-readiness-review.md  runbook.md  technical-contract.md
migrations/: env.py
migrations/versions/: 75cd02f1b576_initial_schema.py  a2f8c3d91e04_add_bill_subject_tags.py  c3e9f4a72b18_add_bill_summaries_and_alert_delivery.py  d4f1a5b83c29_add_pipeline_runs.py
src/: monitoring.py
src/alerts/: telegram_formatter.py  telegram_sender.py
src/collectors/: cga_all_filecopies.py  cga_bill_status.py  cga_daily_filecopies.py  http_fetcher.py  pdf_downloader.py
src/db/: models.py  session.py
src/diff/: change_classifier.py  section_differ.py
src/extract/: confidence.py  normalize_text.py  ocr_fallback.py  pdf_text.py  section_parser.py
src/metadata/: taxonomy.py
src/pipeline/: orchestrator.py
src/schemas/: bills.py  diff.py  extraction.py  intake.py  scoring.py  summary.py
src/scoring/: alert_decisioner.py  client_profile_loader.py  client_scorer.py  subject_tagger.py  summary_generator.py
src/utils/: bill_id.py  storage.py
tests/: conftest.py
tests/integration/: test_persistence.py  (+3 more)
(+43 files in other folders)
