[project]
name = "ct-cga-filecopy-agent"
version = "0.1.0"
description = "CT General Assembly file-copy monitoring and intelligence system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pymupdf>=1.24.0",
    "rapidfuzz>=3.0.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "pillow>=10.0.0"]
telegram = ["python-telegram-bot>=21.0"]
llm = ["openai>=1.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
    "types-beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "apps*", "config*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
